[package]
name = "volumetric-cloud"
version = "0.1.0"
edition = "2024"

[dependencies]
winit = { version = "0.29", features = ["android-native-activity"] }
env_logger = "0.10"
log = "0.4"
wgpu = "25.0"
pollster = "0.3"
bytemuck = { version = "1.16", features = [ "derive" ] }
anyhow = "1.0"
image = "0.23"
cgmath = "0.18"
fs_extra = "1.2"
glob = "0.3"
tobj = { version = "3.2", default-features = false, features = ["async"]}