[package]
name = "volumetric-cloud"
version = "0.1.0"
edition = "2024"

[dependencies]
winit = "0.29"
env_logger = "0.10"
log = "0.4"
wgpu = "25.0"
pollster = "0.3"
bytemuck = { version = "1.16", features = [ "derive" ] }
cgmath = "0.18"
noise = "0.9"
image = "0.25"
imgui = "0.12"
imgui-winit-support = "0.12"
imgui-wgpu = "0.25" 